[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workbenchmark-pddl"
version = "0.1.0"
description = "PDDL domain modeling for WorkBenchMark LEGO Duplo assembly (AIfR Project P1)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Moritz Wehr", email = "mowe03@gmail.com" },
]
dependencies = [
    "unified-planning>=1.3.0",
    "up-pyperplan>=1.1.0",
    "pyyaml>=6.0",
    "numpy>=1.20",
]

# TAMPanda is consumed as an editable local install from ../tampanda and is
# intentionally not pinned here (it is not published on PyPI).
[project.optional-dependencies]
dev = ["pytest>=7"]
eval = ["up-fast-downward"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["workbenchmark_pddl*"]

[tool.setuptools.package-data]
workbenchmark_pddl = ["pddl/*.pddl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
